<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">เติมกะตังส์</string>
    <string-array name="nav_drawer_items">
        <item >เติมเงิน</item>
        <item >ยอดเงินคงเหลือ</item>
        <item >ประวัติการทำรายการ /\nระบบดึงเงินคืน</item>
        <item >บริการเสริม</item>
        <item >ตั้งค่า</item>
        <item >แนะนำ</item>
        <item >ปิดแอปพลิเคชัน</item>
    </string-array>
    <string-array name="nav_drawer_icons">
        <item>@mipmap/ic_open_in_new_black_48dp</item>
        <item>@mipmap/ic_account_balance_wallet_black_48dp</item>
        <item>@mipmap/ic_restore_black_48dp</item>
        <item>@mipmap/ic_extension_black_48dp</item>
        <item>@mipmap/ic_settings_black_48dp</item>
        <item>@mipmap/ic_info_outline_black_48dp</item>
        <item>@mipmap/ic_exit_to_app_black_48dp</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <!--navigation_Topup-->
    <string name="txtAmount">จำนวนเงิน</string>
    <string name="btnContact">สมุด\nรายชื่อ</string>
    <string name="btnLast">เบอร์\nล่าสุด</string>
    <string name="txtTel">หมายเลข</string>
    <string name="btnTopup">เติม</string>
    <string name="btnDel">ลบ</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <!--navigation_ChkBalance-->
    <string name="checkbalanceHeader">กรุณากดไอคอนระบบ\nเพื่อทำการเช็คยอดเงินคงเหลือ</string>
    <!--navigation_Refund-->
    <string name="item_AIS">AIS</string>
    <string name="item_DTAC">DTAC</string>
    <string name="item_TRUE">TRUE</string>
    <string name="item_CAT">CAT</string>
    <string name="btn_Refund">ดึงเงินคืน</string>
    <string name="btn_Cancel">ยกเลิก</string>
    <string name="refundDialogCant">ระบบ my by CAT ยังไม่พร้อมให้บริการ\nทางผู้พัฒนาจะทำการอัพเดตให้เร็วๆนี้ครับ</string>
    <!--navigation_AddOns-->
    <string name="header_Addons">สำหรับคนขายเติมเงินระบบ AIS 1&#8211;2&#8211;call ที่ผูกบัญชีร่วมกับบริการ mPay</string>
    <string name="txt_MPAY_ID">รหัส\nประจำตัว</string>
    <string name="txt_plus">+</string>
    <string name="txt_question">\?</string>
    <!--menu_MPAY-->
    <string name="menu_MPAY">บัญชี mPay</string>
    <string name="btn_ChkBal">ตรวจสอบยอดเงิน\nmPay Wallet</string>
    <string name="btn_ChkCom">ตรวจสอบ\nค่า Commision</string>
    <!--menu_TopupToWallet-->
    <string name="menu_TopupToWallet">เติมเงินเข้ากระเป๋าขายออนไลน์</string>
    <string name="txt_InputAmount">1. กรอกจำนวนเงิน</string>
    <string name="btn_process_1">ทำรายการ(1)</string>
    <string name="txt_SelectAcc">2. เลือกบัญชีที่ต้องการหักเงิน</string>
    <string-array name="type_arrays">
        <item>บัญชี mPay</item>
        <item>บัญชี ธนาคาร</item>
    </string-array>
    <string name="btn_process_2">ทำรายการ(2)</string>
    <!--menu_BuyCardAIS-->
    <string name="menu_BuyCardAIS">ซื้อบัตรเงินสด 1&#8211;2&#8211;Call</string>
    <string name="txt_phoneBuyCard">1. กรอกหมายเลขโทรศัพท์</string>
    <string name="txt_SelectCardValue">2. เลือกราคาบัตรเงินสด 1&#8211;2&#8211;Call</string>
    <string-array name="amount_arrays">
        <item>50</item>
        <item>100</item>
        <item>300</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
    <string name="btn_BuyCardAIS">ซื้อบัตรเงินสด</string>
    <!--menu_AISBill-->
    <string name="menu_AISBill">จ่ายบิล AIS รายเดือน</string>
    <string name="txt_SelectBill">2. เลือกรายการที่จะชำระ</string>
    <string-array name="op_arrays">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <!--menu_TransDays-->
    <string name="menu_TransDays">โอนวัน AIS ระบบเติมเงิน</string>
    <string name="txt_SelectDays">2. เลือกจำนวนวัน</string>
    <string-array name="days_arrays">
        <item>5</item>
        <item>10</item>
        <item>20</item>
    </string-array>
    <string name="btn_TransDays">โอนวัน</string>
    <!--menu_ChkCarrier-->
    <string name="menu_ChkCarrier">ตรวจสอบระบบเครือข่าย\nจากหมายเลขโทรศัพท์</string>

    <!--Popup-->
    <string name="btn_ClosePopup">ปิดหน้าต่างนี้</string>
    <string name="txt_TopupWallet_Description">1. กรอกจำนวนเงินที่ต้องการเติมลงไป\n\n
                            2. กดปุ่ม ทำรายการ(1) รอจนได้รับข้อความเลือกบัญชีเติมเงินเข้ากระเป๋าขาย\n\n
                            3. เลือกบัญชีที่ต้องการให้หักเงินเติมเข้ากระเป๋าขายออนไลน์\n\n
                            4. กดปุ่ม ทำรายการ(2) ระบบจะทำการเติมเงินเข้ากระเป๋าขายออนไลน์ให้ทันทีโดยหักเงินจากบัญชีที่เลือกไว้\n\n
                            ** หมายเหตุ ** หากไม่มีบัญชี mPay รบกวนติดต่อศูนย์บริการของ AIS ได้เลยครับ\n\n</string>
    <string name="txt_BuyCard_Description">1. กรอกหมายเลขโทรศัพท์ที่ต้องการบัตรเติมเงินเติมลงไป\n\n
                            2. เลือกจำนวนเงินบัตรเติมเงินที่ต้องการซื้อ\n\n
                            3. กดปุ่ม ซื้อบัตรเงินสด เสร็จขั้นตอน ลูกค้าจะได้รับข้อความรหัสบัตรทันที\n\n
                            ** หมายเหตุ ** หากไม่มีบัญชี mPay รบกวนติดต่อศูนย์บริการของ AIS ได้เลยครับ\n\n</string>
    <string name="txt_AISBill_Description">1. กรอกหมายเลขโทรศัพท์ที่ต้องการชำระ\n\n
                            2. กดปุ่ม ทำรายการ(1) รอจนได้รับข้อความแจ้งยอดเงินที่ต้องชำระ\n\n
                            3. เลือกหมายเลขยอดชำระจากตัวเลือก\n\n
                            4. กดปุ่ม ทำรายการ(2) ระบบจะทำการชำระค่าโทรศัพท์ให้ทันทีโดยหักเงินจากบัญชี mPay\n\n
                            ** หมายเหตุ ** หากไม่มีบัญชี mPay รบกวนติดต่อศูนย์บริการของ AIS ได้เลยครับ\n\n</string>
    <string name="txt_AISTransDays_Description">1. กรอกหมายเลขโทรศัพท์ที่ต้องการโอนวันให้\n\n
                            2. เลือกจำนวนวันที่ต้องการโอน จากตัวเลือก\n\n
                            3. กดปุ่ม โอนวัน ระบบจะทำการโอนวันตามจำนวนที่เลือกไปยังหมายเลขโทรศัพท์ที่ระบุให้ทันที\n\n</string>
    <!--navigation_Setting-->
    <string name="txtM123">รหัสประจำตัวคนขายออนไลน์</string>
    <string name="txtM121">** หมายเหตุ **\nแอปพลิเคชันนี้ใช้อำนวยความสะดวกในการเติมเงินสำหรับตัวแทนเติมเงินที่เป็นหน่วยเติมเงินที่ได้รับการรับรองจากศูนย์บริการเท่านั้น บุคคลธรรมดาไม่สามารถใช้งานได้!!!
        \n\nรหัสประจำตัวคนขายออนไลน์ ได้มาจากศูนย์บริการกำหนดให้ท่าน กรุณากรอกให้ถูกตามระบบที่ใช้งาน
        \n\nหากท่านใดใช้เครื่องที่รองรับระบบซิมคู่ กรุณาตั้งค่าการทำงานซิมเมื่อโทรออกให้เป็น \"ถามเสมอ\" เพื่อให้ระบบจัดการเติมเงินแยกเติมตามซิมเครือข่ายที่ถูกต้อง
        \n\nสงสัยหรือพบปัญหาแจ้งได้ที่เมนู \"แนะนำ\"</string>
    <string name="btnOKSetting">ตั้งค่า</string>
    <string name="settingDTAC">DTAC</string>
    <string name="settingTRUE">TRUEMOVE-H</string>
    <string name="settingAIS">AIS 1-2-CALL</string>
    <string name="settingCAT">My by CAT</string>
    <string name="settingCAT_1">ใช้ได้ทั้งโอนเงินเข้าคนขายและเติมให้ลูกค้า</string>
    <string name="settingThemeHeader">เลือกสไตล์ชุดสี</string>
    <string name="settingTheme1">ชุดสีพาสเทล</string>
    <string name="settingTheme2">ชุดสีดั้งเดิม</string>
    <!--navigation_About-->
    <string name="about_version">เวอร์ชัน</string>
    <string name="about_content">\t\tแอปพลิเคชันนี้ใช้อำนวยความสะดวกในการเติมเงินสำหรับตัวแทนเติมเงินที่เป็นหน่วยเติมเงินที่ได้รับการรับรองจากศูนย์บริการเท่านั้น บุคคลธรรมดาไม่สามารถใช้งานได้\n
    \t\tหากสนใจเป็นตัวแทนเติมเงิน กรุณาติดต่อที่ศูนย์บริการลูกค้าของแต่ละเครือข่ายใกล้บ้านท่าน</string>
    <string name="about_content2">พัฒนาโดย</string>
    <string name="about_corpname">MONDARO DEVTECH</string>
    <string name="about_content3" tools:ignore="ExtraTranslation">แอพนี้พัฒนาภายนอก Google Play Store เนื่องจากปัญหาการขอร้องสิทธิ์การเข้าถึงส่วนสำคัญในการใช้งานอย่างการโทรเพื่อเติมเงิน
        การเข้าถึงข้อความสำหรับดึงเงินคืน ซึ่งสามารถตรวจสอบการทำงานของโปรแกรมได้ที่ github ของผู้พัฒนา
        หรือหากต้องการติดตามการอัพเดตโปรแกรมเวอร์ชันใหม่ๆ กรุณาเข้าไปที่ ปุ่มเมนูด้านล่าง</string>
    <string name="about_contentSuggestion">
        หรือโทร
        \n AIS 02-271-9123
        \n DTAC 02-202-8400
        \n TRUE 02-647-9077
        \n กรณีต้องการผูกบัญชีกับ mPay โทร 02-271-9299</string>
    <string name="btnEmail">แจ้งปัญหา</string>
    <string name="btnWebsite">เข้าชมเว็บไซต์ผู้พัฒนา\nagoodmany.world</string>
    <string name="btnAppSite">Portal App</string>
    <!--hint-->
    <string name="hintmPay">รหัส mPay</string>
    <string name="hintPhone">เบอร์โทรศัพท์</string>
    <string name="hintAmount">ยอดเงิน</string>
    <string name="hintPhoneGetCard">เบอร์โทรคนซื้อ</string>
    <string name="hintPhoneBill">เบอร์โทรรายเดือน</string>
    <string name="hintReport">** พบข้อผิดพลาด **\nกรุณาแจ้งผู้พัฒนาระบบที่เมนู \"แนะนำ\"</string>
    <!--navigation_Exit-->
    <string name="exit_msg">คุณต้องการ\nปิดแอปพลิเคชัน \?</string>
    <string name="exit_done">ปิดเดี๋ยวนี้</string>
    <string name="exit_cancel">ยกเลิก</string>



</resources>
