<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_material_light"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/menu_TransDays"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_topup_pad"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView_helpmpay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:text="@string/txt_AISTransDays_Description"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/text_topup_pad"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_close_helpmpay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_exit"
            android:padding="10dp"
            android:text="@string/btn_ClosePopup"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>