<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btn_smsAIS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_AIS"
                android:textColor="@color/list_background"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_smsDTAC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_DTAC"
                android:textColor="@color/list_background"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_smsTRUE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_TRUE"
                android:textColor="@color/list_background"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_smsCAT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/item_CAT"
                android:textColor="@color/list_background"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_refundBG"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="6dp"
        android:paddingBottom="6dp">

        <TextView
            android:id="@+id/textViewCountRowsRefund"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@color/list_background"
            android:gravity="center"
            android:textColor="@color/text_btn_pad"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/listViewRefund"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/list_background"
            android:choiceMode="singleChoice"
            android:clickable="true"
            android:focusable="true"
            android:listSelector="@drawable/bkg" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        android:id="@+id/panelBtn">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Refund"
                android:id="@+id/btnRefund"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="@android:color/holo_orange_light"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Cancel"
                android:id="@+id/btnCancel"
                android:layout_weight="1"
                android:textSize="20sp"
                android:background="@android:color/holo_red_light"
                android:layout_marginLeft="10dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>