<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/counter_text_bg"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/exit_msg"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/list_divider"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/button_exit"
            android:padding="8dp"
            android:text="@string/exit_done"
            android:textColor="@color/text_topup_pad"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:background="@drawable/button_normal"
            android:padding="8dp"
            android:text="@string/exit_cancel"
            android:textColor="@color/text_btn_pad"
            android:textSize="20sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>